--- a/templates/page-svg.html
+++ b/templates/page-svg.html
@@ -19,7 +19,7 @@
 
   // set these to define the UI
   divisions = 80;
-  line_thickness = 5;
+  var default_line_thickness = 5;
 
   // set up the basic functionality
   window.addEventListener("load", resizeCanvas);
@@ -68,9 +68,10 @@
     document.querySelector('#durationSnake').style.height = canvasHeight + "px";
 
     h_margin = 10
-    v_margin = 20
+    v_margin = 35
     unitlength = (canvasWidth-(h_margin*2))/divisions;
     v_scale_factor = Math.floor(window.innerHeight/2/unitlength);
+    line_thickness = Math.min(default_line_thickness, ((window.innerWidth-(h_margin*2))/divisions)-3)
     w = unitlength;
     h = unitlength * v_scale_factor - (v_margin*2);
     reps = divisions-2;
