--- a/static/style.css
+++ b/static/style.css
@@ -115,6 +115,15 @@ body {
   width: 2em;
   height: 2em;
   text-align: center;
+  cursor: pointer;
+  z-index: 999;
+  
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #durationSnake {
